--- a/src/app/admin/productEditor.component.html
+++ b/src/app/admin/productEditor.component.html
@@ -1,4 +1,4 @@
-<div class="product-ed_cr-container">
+<div class="product-ed_cr-container admin_editor_container">
 
   <div [class.bg-warning]="editing"
        [class.text-dark]="editing">
