--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -2,30 +2,24 @@
     display: none
 }
 
-
-button {
+.btn_main {
     display: none;
+    font-family: 'Avenir', 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
     align-self: center;
     background: transparent;
     padding: 1rem 1rem;
     margin: 0 1rem;
     transition: all .5s ease;
-    color: #ffffff;
-    font-size: 1.8rem;
-    letter-spacing: 1px;
     outline: none;
     box-shadow: 20px 38px 34px -26px hsla(100, 100%, 100%, 0.2);
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     cursor: pointer;
     border: solid 2px #ffffff;
 }
-/*
-Above is shorthand for:
-border-top-left-radius: 255px 15px;
-border-top-right-radius: 15px 225px;
-border-bottom-right-radius: 225px 15px;
-border-bottom-left-radius:15px 255px;
-*/
+
 button:hover {
      box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
  }
@@ -42,7 +36,7 @@ button:hover {
         flex-direction: column;
         justify-content: space-around;
     }
-    button {
+    .main_page_section button {
         display: block;
     }
 }
