--- a/src/app/content/shop/right-cards/right-cards.component.css
+++ b/src/app/content/shop/right-cards/right-cards.component.css
@@ -1,4 +1,7 @@
 .mat-paginator-container {
+    position: absolute;
+    right: 0;
+    bottom: 85px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -7,27 +10,43 @@
     flex-wrap: wrap-reverse;
     width: 100%;
 }
-::ng-deep .mat-paginator-page-size-select{
-    min-width: 4vw !important;
-}
-::ng-deep .mat-paginator-page-size-select{
 
+::ng-deep .mat-paginator-page-size-select {
+    min-width: 4vw !important;
 }
 
 ::ng-deep mat-form-field {
     padding: 3px 6px;
     text-decoration: none;
 }
-::ng-deep .mat-form-field.mat-focused.mat-primary *{
+
+::ng-deep .mat-form-field.mat-focused.mat-primary * {
     /*color: green!important;*/
 }
-::ng-deep .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+
+::ng-deep .mat-form-field-appearance-legacy .mat-form-field-wrapper {
     padding-bottom: 10px;
 }
+
 ::ng-deep mat-form-field {
     padding: 3px 6px;
     margin: 16px 0;
     color: #4d4d4d;
     box-shadow: none;
     background-color: #ffffff;
+}
+
+@media only screen and (max-device-width: 445px) {
+    ::ng-deep .mat-paginator-range-actions {
+        min-height: auto !important;
+        max-height: 20px!important;
+    }
+    ::ng-deep .mat-paginator-range-label{
+        margin: 0!important;
+    }
+    ::ng-deep .mat-paginator-page-size-select{
+        min-width: 3vw !important;
+        margin: 0!important;
+
+    }
 }
