--- a/backend/angular/assets/css/style.css
+++ b/backend/angular/assets/css/style.css
@@ -995,6 +995,7 @@ header {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-top: 75px;
+    margin-bottom:65px;
 }
 
 .catalog-item {
@@ -2986,7 +2987,7 @@ input[name="tel"] {
     }
 
     .catalog-wrapper {
-        margin: 10px 0;
+        margin: 10px 0 80px;
         /*box-shadow: inset 0 0 0 1px #717171;*/
         /*light theme*/
         /*box-shadow: inset 0 0 0 1px #c5c5c5;*/
