--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -994,8 +994,7 @@ header {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-top: 75px;
-    margin-bottom:65px;
+    margin: 75px 0 65px;
 }
 
 .catalog-item {
@@ -2988,9 +2987,6 @@ input[name="tel"] {
 
     .catalog-wrapper {
         margin: 10px 0 80px;
-        /*box-shadow: inset 0 0 0 1px #717171;*/
-        /*light theme*/
-        /*box-shadow: inset 0 0 0 1px #c5c5c5;*/
     }
 
     .catalog-item {
