checkout css fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3439,6 +3439,17 @@ input[name="tel"] {
 }
 
 @media only screen and (max-width: 480px) {
+    .receiver-box div{
+        width: 95vw;
+        padding-bottom: 6px;
+    }
+    .receiver-box input:first-of-type{
+        margin-left: 0;
+    }
+    .order-price-num span {
+        white-space: nowrap;
+    }
+
     .consultation_subscribe_window {
         top: 5%;
         margin-top: 0
