--- a/src/app/content/shop/right-cards/right-cards.component.html
+++ b/src/app/content/shop/right-cards/right-cards.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="catalog-wrapper">
     <div class="catalog-item"
-         *ngFor=" let product of products | orderBy:orderSelector; let i = index"
+         *ngFor=" let product of products; let i = index"
     >
         <a class="catalog-item__img"
            [routerLink]="['/category', parentCategory, 'id',  product._id]"
@@ -38,7 +38,7 @@
         </div>
     </div>
 </div>
-<div class="mat-paginator-container" *ngIf="length > 14">
+<div class="mat-paginator-container" *ngIf="length > pageSize">
     <mat-paginator [length]="length"
                    [pageSize]="pageSize"
                    [pageSizeOptions]="pageSizeOptions"
